--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,14 +30,14 @@ dist.jar=${dist.dir}/Kaizen.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.27.2.1.jar=C:\\Users\\Raymond\\Documents\\UNSW\\2019\\INFS2605\\sqlite-jdbc-3.27.2.1.jar
+file.reference.sqlite-jdbc-3.27.2.1.jar-1=/Users/lienzhu/Downloads/sqlite-jdbc-3.27.2.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.sqlite-jdbc-3.27.2.1.jar}
+    ${file.reference.sqlite-jdbc-3.27.2.1.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
